test/parser/Queries/syntax_errors/fail_K-LetExprWithout-2.xq
(:*** eq ******foo******* ne ********** eq **** let ***** $ *** for ******foo*******:)
 for (: Test:  for K-LetExprWithout-2  ne             ne        foo let   for       let  foo   eq foo  ne  :) where 
(: Written by: Frans $ Englich          where    where   for           foo      ne  foo :) ne 
(:  2006-10-05T18:29:37+02:00      ne                   :)
(: Purpose: fooA value in a 'let' $  variable cannot be assigned to with '=', it must be ':='. :)
(foo:***** $ **** let ** ne  ne ***** let *********foo****************************:)
let $i = 5 return 3